--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
-    "nuxt": "^2.14.12"
+    "argparse": "^2.0.1",
+    "nuxt": "^2.14.12",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
@@ -31,6 +33,7 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
+    "readline-sync": "^1.4.10",
     "sass": "^1.32.4",
     "sass-loader": "^10.1.1",
     "stylelint": "^13.8.0",
